--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'ngx-toastr/toastr';
+body, * {
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
+    width: 100%;
+    height: 100%;
+}
+
+body::-webkit-scrollbar{
+    display: none;
+}
+:root {
+  --white: #FFFFFF;
+  --light-gray: #f4f6f8;
+  --black-night: #000000;
+  --red: #df0319;
+  --blue-pers:#04BBC7;
+  --button-hover-color: #06767e;
+  --nav-item-hover-color: #d4fcfc;
+  --my-box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+}
