--- a/src/app/components/connexion/connexion.component.html
+++ b/src/app/components/connexion/connexion.component.html
@@ -1,8 +1,8 @@
-<div class="body_page">
+<div class="container">
     <div class="container_left">
         <img [src]="logo1" alt="logo1" width="180" height="180">
     </div>
-    <div class="container_rigth">
+    <div class="container_right">
         <div class="content_form">
             <div class="title">
                 <h1>Login</h1>
@@ -29,7 +29,7 @@
 
                     </div>
                     <br>
-                    <h5>Mot de passe oublié ?</h5>
+                    <span class="forgetPassword">Mot de passe oublié ?</span>
                     <br>
                     <a href="" routerLink="/accueil">
                         <button type="submit">Se Connecter</button>
