--- a/src/app/components/Utils/nav-bar/menu-item/menu-item.component.css
+++ b/src/app/components/Utils/nav-bar/menu-item/menu-item.component.css
@@ -3,22 +3,17 @@
     align-items: center;
     padding: 10px 50px;
     cursor: pointer;
-    width: 100%;
+    border-radius: 10px;
+    margin: 5px 5px 0 5px;
 
-    img{
-        width: 40px;
-        height: 25px;
+    i{
+        min-width: 30px;
     }
 
     a{
+        
         text-decoration: none;
-        color: black;
         margin-left: 20px;
-    }
-
-    .selected{
-        background-color: var(--nav-item-hover-color);
-        border-left: 5px solid var(--blue-pers);
     }
     
 }
