--- a/src/app/components/Utils/nav-bar/nav-bar.component.css
+++ b/src/app/components/Utils/nav-bar/nav-bar.component.css
@@ -1,27 +1,40 @@
 .app-nav-bar {
     width: 250px;
-    height: 92vh;
     background-color: var(--white);
     border-radius: 20px;
     box-shadow: var(--my-box-shadow);
+    padding: 20px 0;
     text-align: center;
-    padding-top: 20px;
-    overflow-y: scroll;
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+
+}
+
+.content_nav_link{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .app-nav-bar::-webkit-scrollbar {
     display: none;
 }
 
-img {
-    width: 140px;
-    height: 140px;
+.selected{
+    background-color: var(--nav-item-hover-color);
+    border-left: 5px solid var(--blue-pers);
+    border-radius: 10px;
+    margin: 5px 5px 0 5px;
 }
 
-.nav_bar-bottom {
-    position: absolute;
-    bottom: 0px;
+img {
+    width: 130px;
+    height: 130px;
+}
+
+.spacer{
+    flex: 1;
 }
 
 #nav_link_last_a {
@@ -39,26 +52,14 @@ img {
     }
 
     img {
-        width: 50px;
-        height: 50px;
+        width: 35px;
+        height: 35px;
         margin: 15px;
     }
 }
 
 @media (max-width: 500px) {
     .app-nav-bar {
-        width: 50px;
-    }
-}
-
-@media (max-width: 400px) {
-    .body_page {
-        padding: 20px 0px;
-    }
-
-    img {
-        width: 30px;
-        height: 30px;
-        margin: 15px;
+        width: 60px;
     }
 }
