--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -1,52 +1,39 @@
-<div class="content-all">
-    <app-nav-bar></app-nav-bar>
-    <div class="body_page">
-        <!--<app-recherche class="fade-in"></app-recherche>-->
-        <div class="super-admin-admin-main fade-in">
-            <h1>Statistiques de l'entreprise</h1>
-            <!-- <div class="super-admin-admin">
-                <div class="admin">
-                    <h2>Super-admin</h2>
-                </div>
-                <div class="super-admin">
-                    <h2>admin</h2>
-                </div>
-            </div> -->
-        </div>
-        <br>
-        <div class="statistique">
-            <h3></h3>
-            <div class="statistique-content fade-in">
-                <div class="conteneur-one fade-in">
-                    <h4>Revenus</h4>
-                    <h5>Revenus Totaux</h5>
-                    <div>
-                        <canvas id="revenusChart"></canvas>
-                    </div>
-                </div>
-                <div class="conteneur-two fade-in">
-                    <h4>Vols réservés</h4>
-                    <h5>Pourcentage des vols réservés en fonction des mois</h5>
-                    <div>
-                        <canvas id="volsChart"></canvas>
-                    </div>
+<div class="container">
+    <div class="super-admin-admin-main fade-in">
+        <h1>Statistiques de l'entreprise</h1>
+    </div>
+    <br>
+    <div class="statistique">
+        <div class="statistique-content">
+            <div class="conteneur-one">
+                <h4>Revenus</h4>
+                <h5>Revenus Totaux</h5>
+                <div class="canva">
+                    <canvas id="revenusChart"></canvas>
                 </div>
             </div>
-
-            <div class="statistique-content fade-in">
-                <div class="conteneur-one fade-in">
-                    <h4>Compagnie</h4>
-                    <h5>L'augmentation du nombre de compagnies</h5>
-                    <div>
-                        <canvas id="compagnieChart"></canvas>
-                    </div>
+            <div class="conteneur-two">
+                <h4>Vols réservés</h4>
+                <h5>Pourcentage des vols réservés en fonction des mois</h5>
+                <div class="canva">
+                    <canvas id="volsChart"></canvas>
                 </div>
-                <div class="conteneur-two fade-in">
-                    <h4>Personnels</h4>
-                    <h5>L'augmentation du nombre de personnels</h5>
-                    <div>
-                        <canvas id="personnelsChart"></canvas>
-                    </div>
+            </div>
+        </div>
+
+        <div class="statistique-content">
+            <div class="conteneur-one">
+                <h4>Compagnie</h4>
+                <h5>L'augmentation du nombre de compagnies</h5>
+                <div class="canva">
+                    <canvas id="compagnieChart"></canvas>
+                </div>
+            </div>
+            <div class="conteneur-two">
+                <h4>Personnels</h4>
+                <h5>L'augmentation du nombre de personnels</h5>
+                <div class="canva">
+                    <canvas id="personnelsChart"></canvas>
                 </div>
             </div>
         </div>
