--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'ngx-toastr/toastr';
-body, * {
-    margin: 0;
+
+*{
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body, html {
+    height: 100vh;
 }
 
 body {
-    width: 100%;
-    height: 100%;
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+}
+
+
+.input {
+    height: 30px;
+    width: 250px;
+    outline: none;
+    padding-left: 10px;
+    border: none;
+    border-bottom: 2px solid var(--black-night);
+    background-color:var(--light-gray);
 }
 
 body::-webkit-scrollbar{
     display: none;
 }
+
 :root {
   --white: #FFFFFF;
   --light-gray: #f4f6f8;
@@ -23,4 +40,8 @@ body::-webkit-scrollbar{
   --button-hover-color: #06767e;
   --nav-item-hover-color: #d4fcfc;
   --my-box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+  --light-color: #DBFDFF;
+  --border-color: rgb(0, 199, 199);
+  --button-hover-color: #06767e;
 }
+
