--- a/src/app/components/accueil/accueil.component.css
+++ b/src/app/components/accueil/accueil.component.css
@@ -10,30 +10,51 @@
 }
 
 .container h1 {
-    text-align: center;
+    font-size: 21px;
+    margin: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.statistique h3 a {
-    margin-left: 15px;
+.statistique {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    h3 a {
+        margin-left: 15px;
+    }
 }
 
-.conteneur-one,
-.conteneur-two {
-    background-color: white;
-    box-shadow: -2px 2px 10px rgb(131, 130, 130);
-    border-radius: 10px;
+.conteneur{
+    padding: 30px;
+    background-color: var(--white);
+    box-shadow: var(--my-box-shadow);
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    gap: 10px;
+    height: 300px;
+    width: 350px;
+    border-radius: 12px;
 }
 
 .canva{
+    flex: 1;
+    width: 100%;
+    height: 30px;
     display: flex;
+    align-items: center;
     justify-content: center;
 }
+
+
 
 
 .statistique-content {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    gap: 10px;
 
 }
 
