--- a/src/app/template/template.component.css
+++ b/src/app/template/template.component.css
@@ -29,6 +29,8 @@
     border-radius: 20px;
     flex: 1;
     overflow-y: scroll;
+    width: 100%;
+    overflow-x: scroll;
 }
 
 @media (max-width: 824px) {
