--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'ngx-toastr/toastr';
 
+:root {
+  --white: rgba(255, 255, 255, 0.66);
+  --light-gray: #f3f3f3;
+  --black-night: #201f1f;
+  --red: #df0319;
+  --blue-pers:#04BBC7;
+  --button-hover-color: #06767e;
+  --nav-item-hover-color: #d4fcfc;
+  --my-box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+  --light-color: #DBFDFF;
+  --border-color: rgb(0, 199, 199);
+}
+
 *{
     padding: 0;
     margin: 0;
@@ -32,17 +45,183 @@ body::-webkit-scrollbar{
     display: none;
 }
 
-:root {
-  --white: #FFFFFF;
-  --light-gray: #f4f6f8;
-  --black-night: #201f1f;
-  --red: #df0319;
-  --blue-pers:#04BBC7;
-  --button-hover-color: #06767e;
-  --nav-item-hover-color: #d4fcfc;
-  --my-box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
-  --light-color: #DBFDFF;
-  --border-color: rgb(0, 199, 199);
-  --button-hover-color: #06767e;
+/* button Style */
+button{
+  background-color: var(--blue-pers);
+  border-radius: 10px;
+  border: 1px solid var(--nav-item-hover-color);
+  color: white;
+  padding: 8px 14px;
+  cursor: pointer;
+  transition: 0.2s;
+  font-weight: 800;
 }
+button:hover{
+  scale: 1.1;
+}
+
+
+/* Modal styles */
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(8, 8, 8, 0.151);
+
+  .closeBtn {
+    color: white;
+    float: right;
+    text-align: center;
+    font-size: 28px;
+    font-weight: bold;
+    background-color: red;
+    padding: 0 10px 0 10px;
+    border-radius: 20px;
+    border: 1px solid black;
+    transition: .5s background-color, color;
+  }
+  .closeBtn:hover, .closeBtn:focus {
+    text-decoration: none;
+    cursor: pointer;
+    background-color: white;
+    color: red;
+  }
+
+  .modal_btn_del, .modal_btn_up{
+    width: 90px;
+    height: 40px;
+    border-radius: 5px;
+    border: none;
+    color: white;
+    font-weight: 600;
+    transition: .5s background-color, color;
+    cursor: pointer;
+  }
+  .modal_btn_del{
+    background-color: var(--red);
+  }
+  .modal_btn_del:hover{
+    background-color: rgb(170, 10, 10);
+    color: var(--white);
+  }
+
+  .modal_btn_up{
+    background-color: var(--blue-pers);
+    margin-left: 10px;
+  }
+  .modal_btn_up:hover{
+    background-color: #05747c;
+    margin-left: 10px;
+    color: var(--white);
+  }
+
+
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+
+}
+
+.form_content {
+
+  input {
+    width: 250px;
+    height: 25px;
+    border-radius: 5px;
+    margin-bottom: 2px;
+    background-color: rgb(172, 243, 255);
+    border: 3px solid rgb(0, 217, 255);
+    font-size: 12px;
+    margin-left: 5px;
+    color: black;
+    font-weight: 600;
+    outline: none;
+    cursor: pointer;
+  }
+
+  button {
+    background-color: var(--white);
+    color: black;
+    border-color: var(--blue-pers);
+    cursor: pointer;
+  }
+  button:hover {
+    background-color: #04BBC7;
+    color: white;
+  }
+
+}
+
+.action{
+  display: flex;
+  i{
+    padding: 5px;
+    border-radius: 12px;
+    background-color: white;
+    border: 1px solid black;
+    cursor: pointer;
+
+  }
+  i:hover{
+    transition: 0.4s;
+    transform: scale(1.2) rotate(20deg);
+  }
+
+  .button1 i{
+    color: var(--red);
+
+  }
+  .button2 i{
+    color: var(--blue-pers);
+  }
+
+}
+
+/* Style général de la table */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 20px 0;
+  font-size: 16px;
+  text-align: left;
+}
+
+/* Style de l'en-tête */
+thead {
+  background-color: var(--black-night);
+  color: white;
+  box-shadow: var(--my-box-shadow);
+}
+
+thead th {
+  padding: 12px 15px;
+}
+
+/* Style des lignes du corps de la table */
+tbody tr {
+  border-bottom: 1px solid #dddddd;
+  transition: background-color 0.3s ease;
+}
+
+tbody tr:hover {
+  background-color: #f1f1f1;
+}
+
+/* Style des cellules */
+td {
+  padding: 12px 15px;
+}
+
+
 
