--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'ngx-toastr/toastr';
+@import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
 
 :root {
   --white: rgba(255, 255, 255, 0.66);
