--- a/src/app/Pages/avion/siege/siege-card/siege-card.component.css
+++ b/src/app/Pages/avion/siege/siege-card/siege-card.component.css
@@ -48,8 +48,20 @@
   border-radius: 0 0 10px 10px;
 }
 
+.container{
+  position: relative;
+  display: inline-block;
+}
+
 .info{
-  background-color: white;
-  box-shadow: var(--my-box-shadow);
-  padding: 3px;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px;
+  background-color: #333;
+  color: #fff;
+  border-radius: 5px;
+  white-space: nowrap;
+  z-index: 1000;
 }
