Creation et suppression des sieges ok

--- a/src/app/Pages/avion/siege/siege.component.html
+++ b/src/app/Pages/avion/siege/siege.component.html
@@ -40,26 +40,26 @@
     } @else {
       <div class="airplane">
         <div class="window"></div>
-        <!-- Rangée 1 -->
+        <!-- Rangée 1
         @for (siege of siegeList.tete[0]; track siege.id){
           <div class="row">
             <app-siege-card [siege]="siege"></app-siege-card>
             <app-siege-card [siege]="siege"></app-siege-card>
             <app-siege-card [siege]="siege"></app-siege-card>
           </div>
-          <!-- Rangée 2 -->
+          Rangée 2
           <div class="row">
             <app-siege-card [siege]="siege"></app-siege-card>
             <app-siege-card [siege]="siege"></app-siege-card>
             <app-siege-card [siege]="siege"></app-siege-card>
           </div>
-          <!-- Rangée 3 -->
+          Rangée 3
           <div class="row">
             <app-siege-card [siege]="siege"></app-siege-card>
             <app-siege-card [siege]="siege"></app-siege-card>
             <app-siege-card [siege]="siege"></app-siege-card>
           </div>
-        }
+        }-->
       </div>
     }
 
